--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ header{
   
 }
 /*change color and font of heading name*/
-h1{
-  color: rgb(0, 0, 0);
+h1 footer{
+  color: rgb(255, 255, 255);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 18px;
   margin-bottom: 1px;
@@ -39,7 +39,7 @@ main h2{
   text-align: center;
 }
 /*modifying intro sentence*/
-main h4 h3 .intro{
+main .intro{
   font-size: 20px;
   margin-bottom: 1px;
   padding-bottom: 1px;
