--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ main h2{
   text-align: center;
 }
 /*modifying intro sentence*/
-main .intro{
+main h3 h4 .intro{
   font-size: 20px;
   margin-bottom: 1px;
   padding-bottom: 1px;
