--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ header{
   
 }
 /*change color and font of heading name*/
-h1 footer{
+h1{
   color: rgb(255, 255, 255);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 18px;
@@ -81,4 +81,11 @@ main .bio ol{
   color: rgba(0, 0, 0, 0.61);
   margin-top: 0px;
   padding-top: 0px;
+}
+footer{
+  color: rgb(255, 255, 255);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-bottom: 1px;
+  padding-bottom: 1px;
 }
